Added the following methods to the Users Client:  * GetListOfFollowers  * GetListOfFollowing  * GetListOfAllFriends  * GetListOfAllFollowers  * GetListOfAllFollowing
Added the following tests:
 * ReturnsAllFriends
 * ReturnsAllFollowers
 * ReturnsAllFollowing
 * ReturnsFollowers
 * ReturnsNullIfNotFound
 * ReturnsFollowing

Now the API calls will throw an ApiException with Invalid OAuth Request if they oauth request couldn't be validated.

Added CreatedAt field on the UserSummary class that returns the date when the relationship was made for friend, follower, following.

--- a/Goodreads/Goodreads.csproj
+++ b/Goodreads/Goodreads.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Clients\SeriesClient.cs" />
     <Compile Include="Clients\UsersClient.cs" />
     <Compile Include="Exceptions\ApiException.cs" />
+    <Compile Include="Helpers\ClientHelpers.cs" />
     <Compile Include="Helpers\EnumHelpers.cs" />
     <Compile Include="Extensions\RestSharpExtensions.cs" />
     <Compile Include="Extensions\XmlExtensions.cs" />
